FrontEnd/docc.scss
/* Copyright 2020-2021 Dave Verwer, Sven A. Schmidt, and other contributors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

$mobile-breakpoint: 740px;

@import 'styles/colors';
@import 'styles/images';

header.spi,
footer.spi {
  position: sticky;
  width: 100%;
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    'SF Hello',
    'Segoe UI',
    Roboto,
    'Helvetica Neue',
    Arial,
    sans-serif,
    'Apple Color Emoji',
    'Segoe UI Emoji' !important;
  font-size: 16px;
  line-height: 1.4;
  color: var(--header-text);
  background-color: var(--header-background);

  .inner {
    max-width: 980px;
    margin: 0 auto;
    padding: 10px;
  }

  a {
    text-decoration: none;
    color: var(--header-text);
    outline: none;

    &:hover {
      text-decoration: underline;
      color: var(--header-link-highlight);
    }
  }
}

header.spi {
  // The breadcrumb bar in the DocC Vue app is 9997.
  z-index: 9998;

  .inner {
    &.breadcrumbs {
      > nav {
        padding-block: 6px;

        > ul {
          display: flex;
          gap: 20px;
          align-items: center;
          padding: 0;
          list-style: none;

          > li {
            position: relative;

            &:first-child {
              a {
                padding-left: 40px;
                background-position: left center;
                background-repeat: no-repeat;
                background-size: 30px;
                background-image: url('/images/logo-medium.svg');
                background-clip: padding-box;
              }

              @media screen and (max-width: $mobile-breakpoint) {
                margin-bottom: 5px;
              }
            }

            a {
              width: 100%;
              height: 100%;
              padding: 5px 0;
            }

            &:not(:first-child) {
              &::before {
                content: '';
                position: absolute;
                top: calc(50% - 6px);
                left: -16px;
                opacity: 0.75;
                width: 12px;
                height: 12px;
                background-color: var(--breadcrumb-header);
                clip-path: polygon(50% 0, 75% 50%, 50% 100%, 25% 100%, 50% 50%, 25% 0);
              }

              @media screen and (max-width: $mobile-breakpoint) {
                margin-left: 25px;
              }
            }

            .choices {
              position: relative;

              > span {
                cursor: pointer;
              }

              ul {
                position: absolute;
                display: none;
                min-width: 200px;
                padding: 15px 0;
                background-color: var(--header-background);
                border-top: 3px rgba(255, 255, 255, 20%) solid;
                box-shadow: var(--panel-shadow);

                li {
                  padding: 2px 15px 2px 20px;

                  &.current {
                    background-color: rgba(255, 255, 255, 15%);
                  }
                }
              }

              &:hover {
                ul {
                  z-index: 9999; // One more than the header.spi.
                  display: grid;
                  gap: 2px;
                }
              }
            }
          }

          @media screen and (max-width: $mobile-breakpoint) {
            flex-direction: column;
            gap: 0;
            align-items: flex-start;
          }
        }
      }
    }

    &.latest_stable a {
      color: var(--header-link-highlight);
    }
  }

  .latest_stable_wrap {
    background-color: rgba(255, 255, 255, 7.5%);

    @media (prefers-color-scheme: dark) {
      background-color: rgba(0, 0, 0, 12.5%);
    }
  }

  span.stable,
  span.beta,
  span.branch {
    padding-left: 18px;
    font-weight: 600;
    background-position: top 2px left;
    background-repeat: no-repeat;
    background-size: 14px;
  }

  span.stable {
    background-image: var(--image-stable);
  }

  span.beta {
    background-image: var(--image-beta);
  }

  span.branch {
    background-image: var(--image-branch);
  }
}

footer.spi nav {
  display: flex;
  flex-direction: column;
  align-items: center;

  a {
    font-weight: 600;
  }

  ul {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0;
    padding: 0;

    li {
      margin: 0 5px;
      list-style: none;
    }

    a {
      padding: 3px;
      font-size: 15px;
    }
  }

  small {
    font-size: 13px;
    text-align: center;
  }
}

